refactor: remove MCP layer, keep only script-based CLI skill

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-node_modules/
-dist/
+.cache.json
+config.json
+__pycache__/
+*.pyc
 .env
 .mcp.json
-*.tgz
-.claude/settings.local.json
-skill/mcp-config.json
-skill/PROFILE.md
